remove extra \n from deck

--- a/decks/RoboticsGPTCAH.deck.json5
+++ b/decks/RoboticsGPTCAH.deck.json5
@@ -1672,7 +1672,7 @@
     "Rectangles.",
     "Rehab.",
     "Repression.",
-    "reputation,\\nreputation,\\nreputation",
+    "reputation,\reputation,\reputation",
     "Reverse gentrification.",
     "Rich people.",
     "Riding off into the sunset.",
@@ -2308,7 +2308,7 @@
     "My secret butt.",
     "My son's dipshit friends.",
     "My son's husband's huge cock.",
-    "My wife.\\n(in Borat voice)",
+    "My wife.\(in Borat voice)",
     "Naked Dad.",
     "Netflix.",
     "New DNA evidence exonerating OJ Simpson.",
@@ -4258,7 +4258,7 @@
     "The EDL.",
     "The entire Mormon Tabernacle Chior.",
     "The Flying Spaghetti Monster.",
-    "the four,\\nor the three,\\nor the two",
+    "the four,\or the three,\or the two",
     "The gun lobby",
     "The harsh light of day.",
     "The harsh reality that all horses are people in horse costumes.",
@@ -5187,10 +5187,10 @@
     "Collapsing into singularity. Twenty minutes fo foreplay, three minutes of coitus, five minutes of rest, back to the yards for some croquet.",
     "Computers.",
     "Cum, but it's ranch.",
-    "Fashion... \\nheard of if?",
+    "Fashion... \heard of if?",
     "Getting my mind boggled by a gang of mind bogglers.",
     "Letting these hoes know.",
-    "Meatballs,\\nmeatballs,\\nmeatballs!",
+    "Meatballs,\meatballs,\meatballs!",
     "Passing fart and making toilet.",
     "Running afoul of the Sultan's Janissaries.",
     "Sheboygan, Wisconsin.",
@@ -5200,7 +5200,7 @@
     "The tiny man who only eats coffee beans and diarrheas into my thermos every morning.",
     "Using electric eels to solve the world's energy crisis.",
     "Why, a hot air balloon of course!",
-    "You there!\\nFrench boy!",
+    "You there!\French boy!",
     "A teenage boy gunning for a handjob.",
     "Feeding a man a pie made of his own children.",
     "Ironically buying a trucker hat and then ironically being a trucker for 38 years.",
@@ -5350,7 +5350,7 @@
     "Munkustrap.",
     "Old Deuteronomy.",
     "Peter, Augustus, Alonzo, or James.",
-    "Practical cats,\\ndramatical cats,\\noratical cats,\\nsceptical cats,\\nromantical cats,\\nparasitical cats,\\nstatistical cats,\\npolitical cats,\\nhypocritical cats,\\nclerical cats,\\ncynical cats,\\nrabbinical cats.",
+    "Practical cats,\dramatical cats,\oratical cats,\sceptical cats,\romantical cats,\parasitical cats,\statistical cats,\political cats,\hypocritical cats,\clerical cats,\cynical cats,\rabbinical cats.",
     "Rum Tum Tugger.",
     "Shimbleshanks.",
     "Sir Andrew Lloyd Webber.",
